#278:Add IS_GREATEST_HITS field for single artist compilations instead of setting IS_COMPILATION
#279:Full Date added to IDv23Tag not deleted with deleteField(YEAR)
#280:MP4 truncated track length
#282:Flac:Problem saving files where Image description contains text characters that require more than one byte
#285:Change order that block types are written to FLAC
#288:APIC frames not saving description for ID3 based formats
#291:Do not throw error if unable to decode subframe frames, just log error
#290:Unable to save Wav files if has existing non-contiguous metadata chunks separated by data chunk
#270:NullPointerException with some WAV tag conversion
#297:Allow Wav files that are larger than 2GB
#298:Move to Java 1.8
#071:Rewrite Mp4 TagWriter so it doesn't need to use temporary files
#247:Not able to save this m4a
#302:java.nio.BufferUnderflowException when reading a corrupted mp3 file

2.2.5
#033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
#036:Added getNoSamples() to AudioHeader interface
#040:If ID3 frame marked as UTF-16 but has no BOM we now look to see if first byte contains data or not, if doesn't likely to be BE otherwise LE
#041:Fix equality checks for tags so based on contents not simple identity check
#061:Ensure if you try and set a field value to null an IllegalArgumentException will be thrown for all formats
#049:Mp4 now able to write file with udta atom plus unknown subatoms as well as meta atom
#077:Added support writing Aiff artwork
#078:Track length not being calculated in for Wav files
#079:Aiff Bitrate not calculated correctly
#481:Fixed handling of an empty FrameBodyTDAT frame preventing reading of valid TYER frame

2.2.4
Added support for reading/writing Aiff and Wav metadata
Now requires Java 1.7
Added support for deploying versions to bintray