@@ -129,4 +129,5 @@ test607.wav,no,297,wav with larger than 2gb of data
 test608.m4a,no,, recent mp4 from iTunes that seems to have invalid atom after mdat atom
 test609.wav,no,299, BufferUnderflowException on read
 test610.aid, no, 300: BufferUnderFlow reading odd sized comment chunk but missing extra byte
-test302a.mp3, no, 302: Corrupt mp3 with invalid encoding bit set messing up frame size
+test302a.mp3, yes, 302: Corrupt mp3 with invalid encoding bit set messing up frame size
+test303.mp3, yes, 303: java.lang.NullPointerException when reading a corrupted audio file
