@@ -107,6 +107,7 @@ Summarise Changes
 #071:Rewrite Mp4 TagWriter so it doesn't need to use temporary files
 #247:Not able to save this m4a
 #302:java.nio.BufferUnderflowException when reading a corrupted mp3 file
+#303:java.lang.NullPointerException when reading a corrupted audio file
 
 2.2.5
 #033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
